crates/strider/tests/snapshots/v3__ppc32be__globals__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100004bc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x100004e4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v11" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v11" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1000050c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "14" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "14" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10000568:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v27" [color="#888888", style=dashed];
  "v27" -> "21" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "28" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "21" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v31" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v31" [color="#888888", style=dashed];
  "v31" -> "28" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v32" [color="#888888", style=dashed];
  "v32" -> "28" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v33" [color="#888888", style=dashed];
  "v33" -> "28" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "30" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v34" [color="#888888", style=dashed];
  "v34" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "21" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "14" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "14" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "8" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v11" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[7] ← r10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "46" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "52" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "52" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "55" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
