crates/strider/tests/snapshots/v3__ppc32be__globals__runtime_const_idx.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "10" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ r9", shape=house, fillcolor="#163030"];
  "9" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "12" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x100007a4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "29" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "33" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "37" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "47" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "79" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "85" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "85" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "87" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
